samples/_failures_safe/1761715030_2b56d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83fe49d1.c: In function ‘main’:
./samples/SAFE/__tmp_83fe49d1.c:167:5: error: expected expression at end of input
  167 |     if (len >
      |     ^~
./samples/SAFE/__tmp_83fe49d1.c:167:5: error: expected declaration or statement at end of input
